# hdbc-oracle

./: COPYRIGHT  HDBC-oracle.cabal  Makefile  README.md  darcs-record-0
Database/HDBC/: Oracle.hs
Database/HDBC/Oracle/: OCIConstants.lhs  OCIFunctions.lhs  Util.lhs
